把“连连看”改成图片版。全部用名人头像做图片。此为稳定版。

--- a/resource.qrc
+++ b/resource.qrc
@@ -9,4 +9,14 @@
     <qresource prefix="/trans">
         <file>zh_CN.qm</file>
     </qresource>
+    <qresource prefix="/photo">
+        <file>image/6.png</file>
+        <file>image/7.png</file>
+        <file>image/8.png</file>
+        <file>image/9.png</file>
+        <file>image/10.png</file>
+        <file>image/11.png</file>
+        <file>image/12.png</file>
+        <file>image/13.png</file>
+    </qresource>
 </RCC>
