--- a/resource.qrc
+++ b/resource.qrc
@@ -5,6 +5,7 @@
         <file>rearrange.png</file>
         <file>about.png</file>
         <file>Qt.png</file>
+        <file>network.png</file>
     </qresource>
     <qresource prefix="/trans">
         <file>zh_CN.qm</file>
